[package]
name = "my_rust_impl"
version = "0.1.0"
authors = ["skliew <skliew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
fnv = "1.0.7"
itertools = "0.10.1"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
